force-app/main/default/objects/Event_Recipes_Demo__e/fields/accountId__c.field-meta.xml
<CustomField>
    <fullName>accountId__c</fullName>
    <description>This is the Salesforce Account Id that we should attach the image to.</description>
    <label>accountId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>