force-app/main/default/objects/Event_Recipes_Demo__e/fields/url__c.field-meta.xml
<CustomField>
    <fullName>url__c</fullName>
    <description>This field holds the image url to be added.</description>
    <label>url</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>